cfg.cpp
#line 1 "cfg.rl"
// Copyright 2015-2022 Nicholas J. Kain <njkain at gmail dot com>
// SPDX-License-Identifier: MIT
#include "fcactus.hpp"
#include <cstring>
#include <climits>
#include <cassert>
#include <nk/string_replace_all.hpp>
#include <nk/from_string.hpp>
#include <nk/scopeguard.hpp>
extern "C" {
#include "nk/privs.h"
}

#define MAX_LINE 2048

struct ParseCfgState {
	ParseCfgState(inotify &inot) : wm(nullptr), inw(inot),
	intv_st(nullptr), intv2_st(nullptr), strv_st(nullptr),
	v_strlen(0), linenum(0), v_int(0), v_int2(0), cs(0), cmdret(0),
	intv2_exist(false)
	{
		create_job();
		memset(v_str, 0, sizeof v_str);
	}
	
	char v_str[1024];
	
	std::unique_ptr<watch_meta> wm;
	
	inotify &inw;
	
	const char *intv_st;
	const char *intv2_st;
	const char *strv_st;
	
	size_t v_strlen;
	size_t linenum;
	
	int v_int;
	int v_int2;
	
	int cs;
	int cmdret;
	
	bool intv2_exist;
	
	void create_job()
	{
		assert(!wm);
		wm = std::make_unique<watch_meta>();
		cmdret = 0;
	}
	
	void finish_job()
	{
		if (!wm)
			return;
		if (!wm->valid()) {
			log_line("ignoring invalid job at line %zu", linenum);
			wm.reset();
			return;
		}
		inw.add(std::move(wm));
		wm.reset();
	}
	
	void setgroupv()
	{
		if (nk_gidbyname(v_str, &wm->group_)) {
			log_line("%s: nonexistent group specified at line %zu", __func__, linenum);
			std::exit(EXIT_FAILURE);
		}
	}
	
	void setuserv()
	{
		if (nk_uidgidbyname(v_str, &wm->user_, &wm->group_)) {
			log_line("%s: nonexistent user specified at line %zu", __func__, linenum);
			std::exit(EXIT_FAILURE);
		}
	}
	
	void setlim(int type)
	{
		struct rlimit rli;
		rli.rlim_cur = v_int == 0 ? RLIM_INFINITY : v_int;
		rli.rlim_max = v_int2 == 0 ? RLIM_INFINITY : v_int2;
		wm->limits_.add(type, rli);
	}
	
};

struct pckm {
	pckm() : st(nullptr), cs(0) {}
	char *st;
	int cs;
};


#line 116 "cfg.rl"



#line 106 "cfg.cpp"
static const int parse_cmd_key_m_start = 1;
static const int parse_cmd_key_m_first_final = 2;
static const int parse_cmd_key_m_error = 0;

static const int parse_cmd_key_m_en_main = 1;


#line 118 "cfg.rl"


// cmdret = 0: Not parsed a command key yet.
// cmdret = 1: Success.  Got a command key.
// cmdret = -1: Error: malformed command key.
// cmdret = -2: Error: incomplete command key.
// cmdret = -3: Error: duplicate command key.
static void parse_command_key(ParseCfgState &fas)
{
	char *p = fas.v_str;
	const char *pe = fas.v_str + fas.v_strlen;
	const char *eof = pe;
	
	struct pckm pckm;
	
	if (fas.cmdret != 0) {
		fas.cmdret = -3;
		log_line("Duplicate 'command' value at line %zu", fas.linenum);
		std::exit(EXIT_FAILURE);
	}
	
	
#line 137 "cfg.cpp"
	{
		pckm.cs = (int)parse_cmd_key_m_start;
	}
	
#line 139 "cfg.rl"
	
	
#line 145 "cfg.cpp"
	{
		switch ( pckm.cs ) {
			case 1:
			goto st_case_1;
			case 2:
			goto st_case_2;
			case 0:
			goto st_case_0;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
		}
		_st1:
		if ( p == eof )
			goto _out1;
		p+= 1;
		st_case_1:
		if ( p == pe && p != eof )
			goto _out1;
		if ( p == eof ) {
			goto _st1;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _st1;
				}
				case 32: {
					goto _st1;
				}
				case 92: {
					goto _ctr3;
				}
			}
			goto _ctr2;
		}
		_ctr2:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 198 "cfg.cpp"
		
		goto _st2;
		_ctr4:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 210 "cfg.cpp"
		
		goto _st2;
		_st2:
		if ( p == eof )
			goto _out2;
		p+= 1;
		st_case_2:
		if ( p == pe && p != eof )
			goto _out2;
		if ( p == eof ) {
			goto _ctr4;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _ctr6;
				}
				case 32: {
					goto _ctr6;
				}
				case 92: {
					goto _st5;
				}
			}
			goto _st2;
		}
		_st0:
		if ( p == eof )
			goto _out0;
		st_case_0:
		goto _out0;
		_ctr10:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 249 "cfg.cpp"
		
		goto _st3;
		_ctr6:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 261 "cfg.cpp"
		
		goto _st3;
		_ctr8:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 269 "cfg.cpp"
		
		{
#line 109 "cfg.rl"
			fas.wm->args_ = std::string(pckm.st, p - pckm.st); }
		
#line 275 "cfg.cpp"
		
		goto _st3;
		_ctr17:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 287 "cfg.cpp"
		
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 293 "cfg.cpp"
		
		goto _st3;
		_st3:
		if ( p == eof )
			goto _out3;
		p+= 1;
		st_case_3:
		if ( p == pe && p != eof )
			goto _out3;
		if ( p == eof ) {
			goto _ctr8;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _ctr10;
				}
				case 32: {
					goto _ctr10;
				}
			}
			goto _ctr9;
		}
		_ctr9:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 324 "cfg.cpp"
		
		goto _st4;
		_ctr11:
		{
#line 109 "cfg.rl"
			fas.wm->args_ = std::string(pckm.st, p - pckm.st); }
		
#line 332 "cfg.cpp"
		
		goto _st4;
		_st4:
		if ( p == eof )
			goto _out4;
		p+= 1;
		st_case_4:
		if ( p == pe && p != eof )
			goto _out4;
		if ( p == eof ) {
			goto _ctr11;}
		else {
			if ( ( (*( p))) == 0 ) {
				goto _st0;
			}
			goto _st4;
		}
		_ctr3:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 355 "cfg.cpp"
		
		goto _st5;
		_ctr13:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 367 "cfg.cpp"
		
		goto _st5;
		_st5:
		if ( p == eof )
			goto _out5;
		p+= 1;
		st_case_5:
		if ( p == pe && p != eof )
			goto _out5;
		if ( p == eof ) {
			goto _ctr13;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _ctr6;
				}
				case 32: {
					goto _ctr14;
				}
				case 92: {
					goto _st5;
				}
			}
			goto _st2;
		}
		_ctr14:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 405 "cfg.cpp"
		
		goto _st6;
		_ctr15:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 417 "cfg.cpp"
		
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 423 "cfg.cpp"
		
		{
#line 109 "cfg.rl"
			fas.wm->args_ = std::string(pckm.st, p - pckm.st); }
		
#line 429 "cfg.cpp"
		
		goto _st6;
		_st6:
		if ( p == eof )
			goto _out6;
		p+= 1;
		st_case_6:
		if ( p == pe && p != eof )
			goto _out6;
		if ( p == eof ) {
			goto _ctr15;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _ctr17;
				}
				case 32: {
					goto _ctr17;
				}
				case 92: {
					goto _ctr18;
				}
			}
			goto _ctr16;
		}
		_ctr16:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 463 "cfg.cpp"
		
		goto _st7;
		_ctr19:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 475 "cfg.cpp"
		
		{
#line 109 "cfg.rl"
			fas.wm->args_ = std::string(pckm.st, p - pckm.st); }
		
#line 481 "cfg.cpp"
		
		goto _st7;
		_st7:
		if ( p == eof )
			goto _out7;
		p+= 1;
		st_case_7:
		if ( p == pe && p != eof )
			goto _out7;
		if ( p == eof ) {
			goto _ctr19;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _ctr6;
				}
				case 32: {
					goto _ctr6;
				}
				case 92: {
					goto _st8;
				}
			}
			goto _st7;
		}
		_ctr18:
		{
#line 103 "cfg.rl"
			pckm.st = p; }
		
#line 515 "cfg.cpp"
		
		goto _st8;
		_ctr22:
		{
#line 104 "cfg.rl"
			
			fas.wm->cmd_ = std::string(pckm.st, p - pckm.st);
			string_replace_all(fas.wm->cmd_, "\\ ", 2, " ");
			string_replace_all(fas.wm->cmd_, "\\\\", 2, "\\");
		}
		
#line 527 "cfg.cpp"
		
		{
#line 109 "cfg.rl"
			fas.wm->args_ = std::string(pckm.st, p - pckm.st); }
		
#line 533 "cfg.cpp"
		
		goto _st8;
		_st8:
		if ( p == eof )
			goto _out8;
		p+= 1;
		st_case_8:
		if ( p == pe && p != eof )
			goto _out8;
		if ( p == eof ) {
			goto _ctr22;}
		else {
			switch( ( (*( p))) ) {
				case 0: {
					goto _st0;
				}
				case 9: {
					goto _ctr6;
				}
				case 32: {
					goto _ctr14;
				}
				case 92: {
					goto _st8;
				}
			}
			goto _st7;
		}
		_out1: pckm.cs = 1; goto _out; 
		_out2: pckm.cs = 2; goto _out; 
		_out0: pckm.cs = 0; goto _out; 
		_out3: pckm.cs = 3; goto _out; 
		_out4: pckm.cs = 4; goto _out; 
		_out5: pckm.cs = 5; goto _out; 
		_out6: pckm.cs = 6; goto _out; 
		_out7: pckm.cs = 7; goto _out; 
		_out8: pckm.cs = 8; goto _out; 
		_out: {}
	}
	
#line 140 "cfg.rl"
	
	
	if (pckm.cs == parse_cmd_key_m_error) {
		fas.cmdret = -1;
		log_line("Malformed 'command' value at line %zu", fas.linenum);
		std::exit(EXIT_FAILURE);
	} else if (pckm.cs >= parse_cmd_key_m_first_final)
	fas.cmdret = 1;
	else {
		fas.cmdret = -2;
		log_line("Incomplete 'command' value at line %zu", fas.linenum);
		std::exit(EXIT_FAILURE);
	}
}


#line 300 "cfg.rl"



#line 595 "cfg.cpp"
static const int factions_start = 1;
static const int factions_first_final = 212;
static const int factions_error = 0;

static const int factions_en_main = 1;


#line 302 "cfg.rl"


static int do_parse_config(ParseCfgState &fas, const char *p, size_t plen)
{
	const char *pe = p + plen;
	const char *eof = pe;
	
	
#line 612 "cfg.cpp"
	{
		fas.cs = (int)factions_start;
	}
	
#line 309 "cfg.rl"
	
	
#line 620 "cfg.cpp"
	{
		switch ( fas.cs ) {
			case 1:
			goto st_case_1;
			case 0:
			goto st_case_0;
			case 2:
			goto st_case_2;
			case 212:
			goto st_case_212;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 213:
			goto st_case_213;
			case 214:
			goto st_case_214;
			case 10:
			goto st_case_10;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 16:
			goto st_case_16;
			case 215:
			goto st_case_215;
			case 216:
			goto st_case_216;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 217:
			goto st_case_217;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
			case 33:
			goto st_case_33;
			case 34:
			goto st_case_34;
			case 35:
			goto st_case_35;
			case 218:
			goto st_case_218;
			case 36:
			goto st_case_36;
			case 37:
			goto st_case_37;
			case 38:
			goto st_case_38;
			case 39:
			goto st_case_39;
			case 40:
			goto st_case_40;
			case 41:
			goto st_case_41;
			case 219:
			goto st_case_219;
			case 42:
			goto st_case_42;
			case 43:
			goto st_case_43;
			case 44:
			goto st_case_44;
			case 45:
			goto st_case_45;
			case 220:
			goto st_case_220;
			case 46:
			goto st_case_46;
			case 47:
			goto st_case_47;
			case 48:
			goto st_case_48;
			case 49:
			goto st_case_49;
			case 221:
			goto st_case_221;
			case 50:
			goto st_case_50;
			case 51:
			goto st_case_51;
			case 52:
			goto st_case_52;
			case 53:
			goto st_case_53;
			case 54:
			goto st_case_54;
			case 55:
			goto st_case_55;
			case 222:
			goto st_case_222;
			case 56:
			goto st_case_56;
			case 57:
			goto st_case_57;
			case 58:
			goto st_case_58;
			case 59:
			goto st_case_59;
			case 223:
			goto st_case_223;
			case 60:
			goto st_case_60;
			case 61:
			goto st_case_61;
			case 62:
			goto st_case_62;
			case 63:
			goto st_case_63;
			case 224:
			goto st_case_224;
			case 64:
			goto st_case_64;
			case 65:
			goto st_case_65;
			case 66:
			goto st_case_66;
			case 67:
			goto st_case_67;
			case 68:
			goto st_case_68;
			case 225:
			goto st_case_225;
			case 69:
			goto st_case_69;
			case 70:
			goto st_case_70;
			case 71:
			goto st_case_71;
			case 226:
			goto st_case_226;
			case 72:
			goto st_case_72;
			case 73:
			goto st_case_73;
			case 74:
			goto st_case_74;
			case 75:
			goto st_case_75;
			case 76:
			goto st_case_76;
			case 227:
			goto st_case_227;
			case 77:
			goto st_case_77;
			case 228:
			goto st_case_228;
			case 78:
			goto st_case_78;
			case 79:
			goto st_case_79;
			case 80:
			goto st_case_80;
			case 229:
			goto st_case_229;
			case 81:
			goto st_case_81;
			case 82:
			goto st_case_82;
			case 83:
			goto st_case_83;
			case 230:
			goto st_case_230;
			case 84:
			goto st_case_84;
			case 231:
			goto st_case_231;
			case 85:
			goto st_case_85;
			case 86:
			goto st_case_86;
			case 87:
			goto st_case_87;
			case 232:
			goto st_case_232;
			case 88:
			goto st_case_88;
			case 89:
			goto st_case_89;
			case 90:
			goto st_case_90;
			case 91:
			goto st_case_91;
			case 92:
			goto st_case_92;
			case 93:
			goto st_case_93;
			case 233:
			goto st_case_233;
			case 234:
			goto st_case_234;
			case 94:
			goto st_case_94;
			case 95:
			goto st_case_95;
			case 96:
			goto st_case_96;
			case 97:
			goto st_case_97;
			case 98:
			goto st_case_98;
			case 235:
			goto st_case_235;
			case 99:
			goto st_case_99;
			case 236:
			goto st_case_236;
			case 100:
			goto st_case_100;
			case 101:
			goto st_case_101;
			case 102:
			goto st_case_102;
			case 103:
			goto st_case_103;
			case 104:
			goto st_case_104;
			case 237:
			goto st_case_237;
			case 105:
			goto st_case_105;
			case 238:
			goto st_case_238;
			case 106:
			goto st_case_106;
			case 107:
			goto st_case_107;
			case 108:
			goto st_case_108;
			case 239:
			goto st_case_239;
			case 109:
			goto st_case_109;
			case 240:
			goto st_case_240;
			case 110:
			goto st_case_110;
			case 111:
			goto st_case_111;
			case 112:
			goto st_case_112;
			case 113:
			goto st_case_113;
			case 114:
			goto st_case_114;
			case 241:
			goto st_case_241;
			case 115:
			goto st_case_115;
			case 242:
			goto st_case_242;
			case 116:
			goto st_case_116;
			case 117:
			goto st_case_117;
			case 118:
			goto st_case_118;
			case 119:
			goto st_case_119;
			case 120:
			goto st_case_120;
			case 121:
			goto st_case_121;
			case 243:
			goto st_case_243;
			case 122:
			goto st_case_122;
			case 244:
			goto st_case_244;
			case 123:
			goto st_case_123;
			case 124:
			goto st_case_124;
			case 125:
			goto st_case_125;
			case 126:
			goto st_case_126;
			case 127:
			goto st_case_127;
			case 128:
			goto st_case_128;
			case 129:
			goto st_case_129;
			case 130:
			goto st_case_130;
			case 245:
			goto st_case_245;
			case 131:
			goto st_case_131;
			case 246:
			goto st_case_246;
			case 132:
			goto st_case_132;
			case 133:
			goto st_case_133;
			case 134:
			goto st_case_134;
			case 135:
			goto st_case_135;
			case 136:
			goto st_case_136;
			case 137:
			goto st_case_137;
			case 138:
			goto st_case_138;
			case 139:
			goto st_case_139;
			case 247:
			goto st_case_247;
			case 140:
			goto st_case_140;
			case 248:
			goto st_case_248;
			case 141:
			goto st_case_141;
			case 142:
			goto st_case_142;
			case 143:
			goto st_case_143;
			case 144:
			goto st_case_144;
			case 145:
			goto st_case_145;
			case 249:
			goto st_case_249;
			case 146:
			goto st_case_146;
			case 250:
			goto st_case_250;
			case 147:
			goto st_case_147;
			case 148:
			goto st_case_148;
			case 149:
			goto st_case_149;
			case 150:
			goto st_case_150;
			case 151:
			goto st_case_151;
			case 152:
			goto st_case_152;
			case 251:
			goto st_case_251;
			case 153:
			goto st_case_153;
			case 252:
			goto st_case_252;
			case 154:
			goto st_case_154;
			case 155:
			goto st_case_155;
			case 156:
			goto st_case_156;
			case 157:
			goto st_case_157;
			case 158:
